--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,9 +1,11 @@
 <h2>List of all events:</h1>
 
-<% @events.each do |event| %>
+<%= @events.each do |event| %>
 <ul>
 <li>Host: <%= event.creator%></li>
 <li>Location: <%= event.location%></li>
 <li>Date: <%= event.date%> </li>
+<li><%= link_to 'Click to view event', "events/#{event.id}/"%></li>
 </ul>
+
 <% end %>
