--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,4 +1,6 @@
-<%= form_with url: events_path, method: :post do |form| %>
+<%= form_with model: @event, method: :post do |form| %>
+<%= form.label "name"%>
+  <%= form.text_field "name"%>
   <%= form.label "date"%>
   <%= form.date_field "date"%>
   <%= form.label "location"%>
