--- a/app/views/_header.html.erb
+++ b/app/views/_header.html.erb
@@ -12,12 +12,20 @@
         <li class="nav-item">
          <%= link_to "Create event", events_new_path, class:"nav-link active"%>
         </li>
-        <%# <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
+        <% if user_signed_in?%>
+           <li class="nav-item">
+         <%= link_to "Sign out", destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "nav-link active"%>
+          </li>
+          <% else %>
+
         <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li> %>
+         <%= link_to "Sign up", new_user_registration_path, class:"nav-link active"%>
+        </li>
+
+        <li class="nav-item">
+         <%= link_to "Sign In", new_user_session_path, class:"nav-link active"%>
+        </li>
+        <% end %>
       </ul>
     </div>
   </div>
