--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,15 +2,20 @@
   <div class="alert"><%= flash[:alert] %></div>
 <% end %>
 
-<% @event.each do |detail|%>
-  <h3><%= detail.name %></h3>
+  <h3><%= @event.name %></h3>
 <ul>
-  <% user = User.find(detail.creator_id)%>
+  <% user = User.find(@event.creator_id)%>
   <% username = user.username%>
-<li>Host name: <%= User.find(detail.creator_id).username%> </li>
-<li>Location: <%= detail.location%>  </li>
-<li>Date <%= detail.date%> </li>
-<li>Description <%= detail.description%> </li>
-<li><%= link_to 'Click to participate', attendances_new_path(event_id: detail.id, user_id: user.id, event: @event)%></li>
+<li>Host name: <%= User.find(@event.creator_id).username%> </li>
+<li>Location: <%= @event.location%>  </li>
+<li>Date <%= @event.date%> </li>
+<li>Description <%= @event.description%> </li>
+<li><%= link_to 'Click to participate', attendances_new_path(event_id: @event.id, user_id: current_user.id)%></li>
 </ul>
-<% end %>
+
+<h2>List of attendees</h2>
+    <%@event.attendees.each do|attendee|%>
+  <ul>
+    <li> <%=link_to attendee.username, "/users/#{attendee.id}"%> </li>
+  </ul>
+  <% end %>
