--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,13 @@
-<h1>User's events</h1>
+<h1> <%= "#{@user.username}'s events"%></h1>
 
 <% @user.events.each_with_index do |event, index| %>
+<h3>Host events:</h3>
 <ul> 
-<li> <%="Event: #{index+1}| Name #{event.name} | Date #{event.date} "%> </li>
+<li> <%="Event: #{index+1} | Name: #{event.name} | Date: #{event.date} "%> </li>
 </ul>
 <% end %>
+
+<h3>Attended events</h3>
+<h4> Future events:</h4>
+
 
