separated list of events in events#show for displaying future and past events

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,4 +10,16 @@
 <h3>Attended events</h3>
 <h4> Future events:</h4>
 
+<%@user.attended_events.where("date > :date_today", {date_today: Date.today}).each do |event|%>
+<ul> 
+  <li> <%="Name: #{event.name} | Date: #{event.date} "%> </li> 
+</ul>
+<%end%>
 
+<h4> Past events:</h4>
+
+<%@user.attended_events.where("date < :date_today", {date_today: Date.today}).each do |event|%>
+<ul> 
+  <li> <%="Name: #{event.name} | Date: #{event.date} "%> </li> 
+</ul>
+<%end%>
