--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,19 @@
 <h2>List of all events:</h1>
 
-<% @events.each do |event| %>
+
+<h2>Upcoming events:</h2>
+<% @events_future.each do |event| %>
+<ul>
+<li>Host: <%= event.creator.username%></li>
+<li>Location: <%= event.location%></li>
+<li>Date: <%= event.date%> </li>
+<li><%= link_to 'Click to view event', "events/#{event.id}/"%></li>
+</ul>
+
+<% end %>
+
+<h2>Past events:</h2>
+<% @events_past.each do |event| %>
 <ul>
 <li>Host: <%= event.creator.username%></li>
 <li>Location: <%= event.location%></li>
